--- a/about-us.html
+++ b/about-us.html
@@ -24,30 +24,30 @@
 					<div class="logo-container">
 						<div class="logo-image"><div><img src="img/icon.svg" alt=""></div></div>
 						<div class="logo-content">
-							<h1 class="logo-text">Auto Pap</h1>
-							<h3 class="logo-sub">Za održavanje i popravak motornih vozila</h3>
+							<h1 class="logo-text">Nizz Tech Automotive </h1>
+							<h3 class="logo-sub">Certified Nissan/Infiniti Specialist</h3>
 						</div>					
 					</div>
 					<div class="info-container">
 						<div class="info-box">
 							<div class="info-box-icon"><i class="far fa-calendar-alt fa-2x"></i></div>
 							<div class="info-box-text">
-								<p>Ponedjeljak-Petak 08:00-16:00<p>
-								<p>Subota 08:00-13:00</p>
+								<p>Monday-Friday 08:00-16:00<p>
+								<p>Saturday 08:00-13:00</p>
 							</div>
 						</div>
 						<div class="info-box">
 							<div class="info-box-icon"><i class="fas fa-map-marker-alt fa-2x"></i></div>
 							<div class="info-box-text">
-								<p>Josipa Runjanina 11a<p> 
-								<p>32100 Vinkovci</p>
+								<p>Randy<p> 
+								<p>718-551-1572</p>
 							</div>
 						</div>
 						<div class="info-box">
 							<div class="info-box-icon"><i class="fas fa-mobile-alt fa-2x"></i></div>
 							<div class="info-box-text">
-								<p>0989427536<p>
-								<p>autopap@gmail.com</p>
+								<p>Email<p>
+								<p>nizztechrandy@gmail.com</p>
 							</div>
 						</div>
 					</div>
@@ -58,10 +58,10 @@
 				<div class="header-nav-content">
 					<nav class="main-nav">
 						<ul>
-							<li><a href="index.html">Naslovna</a></li>
-							<li><a href="about-us.html">O nama</a></li>
-							<li><a href="contact.html">Kontakt</a></li>
-							<li><a href="gallery.html">Galerija</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about-us.html">About Us</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -70,10 +70,10 @@
 				<div id="dl-menu" class="dl-menuwrapper">
 					<button class="dl-trigger">Open Menu</button>
 					<ul class="dl-menu">
-						<li><a href="index.html">Naslovna</a></li>
-						<li><a href="about-us.html">O nama</a></li>
-						<li><a href="contact.html">Kontakt</a></li>
-						<li><a href="gallery.html">Galerija</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about-us.html">About Us</a></li>
+						<li><a href="contact.html">Contact</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
 					</ul>
 				</div><!-- /dl-menuwrapper -->
 			</div>
@@ -83,21 +83,22 @@
 			<div class="breadcrumb-wrap">
 				<div class="breadcrumb">
 					<div class="featured-title">
-						<h1>O nama</h1>
+						<h1>About Us</h1>
 					</div>
 					<div class="breadcrumbs">
-						<a href="index.html"><span>Naslovna </span></a>
-						<span><i class="fas fa-chevron-right"></i> O nama</span>
+						<a href="index.html"><span>Home </span></a>
+						<span><i class="fas fa-chevron-right"></i> About Us</span>
 					</div>
 				</div>
 			</div>
 			<div class="about-content-wrap">
 				<div class="about-content">
 					<div class="about-text">
-						<p>Tvrtka AUTO PAP j.d.o.o s uspješnim radom počala je 2016. godine. Sjedište ima na području Vukovarsko-srijemske županije, u Vinkovcima.</p>
-						<p>Osnovna djelatnost je kompletno održavanje i popravak motornih vozila. Iako je riječ o relativno mladom poduzeću, veliki broj zadovoljnih klijenata več se uvjerio u visoku kvalitetu svih usluga koje pružamo.</p>
-						<p>Ponosimo se korištenjem vrhunske mehanizacije, ali i kvalitetnih dijelova renomiranih svjetskih proizvođaća. Klijentima su u svakom trenutku na raspolaganju profesionalni djelatnici s bogatim znanjem i iskustvom u radu.</p>
-						<p>Održavanje i popravak motornih vozila su poslovi koje kvalitetno obavlja tvrtka AUTO-PAP j.d.o.o. koja u svakodnevnom radu slijedi isključivo najviše standarde.</p>
+						
+	<p> Nizztech started successfully in 2012. It has its main shop here in Winter Springs, Florida.</p>
+	<p> We provide complete maintenance and repair of motor vehicles. Although we are a relatively small company, a large number of satisfied customers are more convinced of the high quality of all the services we provide than going to run of the mill dealerships</p> 
+	<p> We pride ourselves on the use of superior mechanization and quality parts of world renowned manufacturers. Professionals with a wealth of knowledge and work experience are at your services at any time.</p> 
+	<p> Maintenance and repair of motor vehicles are performed by certifed techniciations which in our everyday work pursue at the highest standards.</p>
 					</div>
 					<div class="about-img">
 						<img src="img/workshop.jpg" alt="">
@@ -112,46 +113,44 @@
 					<div class="footer-info">
 						<div class="footer-module">
 							<div class="module-title">
-								<h2>Auto Pap j.d.o.o.</h2>
+								<h2>Nizz Tech Randy</h2>
 								<hr>
 							</div>
 							<div class="module-content">
-								<p>Auto Pap j.d.o.o., Josipa Runjanina 11a, 32100 Vinkovci</p>
-								<p>MBS 035371239</p>
-								<p>OIB 61157113158</p>
+								<p>Nizz Tech Automotive</p>
 							</div>
 						</div>
 						<div class="footer-module">
 							<div class="module-title">
-								<h2>Kontakt</h2>
+								<h2>Contact</h2>
 								<hr>
 							</div>
 							<div class="module-content">
 								<p>
 									<i class="far fa-clock"></i> 
-									Ponedjeljak-Petak 08:00-16:00
+									Monday-Friday 08:00-16:00
 									<br>
-									Subota 08:00-13:00
+									Saturday 08:00-13:00
 								</p>
 								<p>
-									<i class="fas fa-phone"></i> 0989427536
+									<i class="fas fa-phone"></i> 718-551-1572
 								</p>
 								<p>
-									<i class="far fa-envelope-open"></i> autopap@gmail.com
+									<i class="far fa-envelope-open"></i> nizztechrandy@gmail.com
 								</p>
 							</div>
 						</div>
 						<div class="footer-module">
 							<div class="module-title">
-								<h2>Pratite nas</h2>
+								<h2>Contact Us</h2>
 								<hr>
 							</div>
 							<div class="module-content">
 								<p>
-									<a href="#"><i class="fab fa-youtube"></i> Youtube kanal</a>
+									<a href="#"><i class="fab fa-youtube"></i> Youtube </a>
 								</p>
 								<p>
-									<a href="#"><i class="fab fa-facebook"></i> Službena facebook stranica</a>
+									<a href="#"><i class="fab fa-facebook"></i> Facebook</a>
 								</p>
 								<p>
 									<a href="#"><i class="fab fa-instagram"></i> Instagram</a>
@@ -161,7 +160,7 @@
 					</div>
 				</div>
 				<div class="footer-copyright">
-					<p>&copy Auto Pap | Made by - Danijel Šugar</p>
+					<p>Nizztech 2019</p>
 				</div>
 				<div class="scroll-to-top" id="arrow-up" >
 					<i class="fas fa-long-arrow-alt-up"></i>
