--- a/gallery.html
+++ b/gallery.html
@@ -22,30 +22,31 @@
 					<div class="logo-container">
 						<div class="logo-image"><div><img src="img/icon.svg" alt=""></div></div>
 						<div class="logo-content">
-							<h1 class="logo-text">Auto Pap</h1>
-							<h3 class="logo-sub">Za održavanje i popravak motornih vozila</h3>
+							<h1 class="logo-text">Nizz Tech</h1>
+							<h3 class="logo-sub">
+								For maintenance and repair of motor vehicles</h3>
 						</div>					
 					</div>
 					<div class="info-container">
 						<div class="info-box">
 							<div class="info-box-icon"><i class="far fa-calendar-alt fa-2x"></i></div>
 							<div class="info-box-text">
-								<p>Ponedjeljak-Petak 08:00-16:00<p>
-								<p>Subota 08:00-13:00</p>
+								<p>Monday-Friday 08:00-16:00<p>
+								<p>Saturday 08:00-13:00</p>
 							</div>
 						</div>
 						<div class="info-box">
 							<div class="info-box-icon"><i class="fas fa-map-marker-alt fa-2x"></i></div>
 							<div class="info-box-text">
-								<p>Josipa Runjanina 11a<p> 
-								<p>32100 Vinkovci</p>
+								<p>Randy<p> 
+								<p>718-551-1572</p>
 							</div>
 						</div>
 						<div class="info-box">
 							<div class="info-box-icon"><i class="fas fa-mobile-alt fa-2x"></i></div>
 							<div class="info-box-text">
-								<p>0989427536<p>
-								<p>autopap@gmail.com</p>
+								<p>718-551-1572<p>
+								<p>nizztechrandy@gmail.com</p>
 							</div>
 						</div>
 					</div>
@@ -56,10 +57,10 @@
 				<div class="header-nav-content">
 					<nav class="main-nav">
 						<ul>
-							<li><a href="index.html">Naslovna</a></li>
-							<li><a href="about-us.html">O nama</a></li>
-							<li><a href="contact.html">Kontakt</a></li>
-							<li><a href="gallery.html">Galerija</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about-us.html">About Us</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -68,10 +69,10 @@
 				<div id="dl-menu" class="dl-menuwrapper">
 					<button class="dl-trigger">Open Menu</button>
 					<ul class="dl-menu">
-						<li><a href="index.html">Naslovna</a></li>
-						<li><a href="about-us.html">O nama</a></li>
-						<li><a href="contact.html">Kontakt</a></li>
-						<li><a href="gallery.html">Galerija</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about-us.html">About Us</a></li>
+						<li><a href="contact.html">Contact</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
 					</ul>
 				</div><!-- /dl-menuwrapper -->
 			</div>
@@ -80,11 +81,11 @@
 			<div class="breadcrumb-wrap">
 				<div class="breadcrumb">
 					<div class="featured-title">
-						<h1>Galerija</h1>
+						<h1>Gallery</h1>
 					</div>
 					<div class="breadcrumbs">
-						<a href="index.html"><span>Naslovna </span></a>
-						<span><i class="fas fa-chevron-right"></i> Galerija</span>
+						<a href="index.html"><span>Home </span></a>
+						<span><i class="fas fa-chevron-right"></i> Gallery</span>
 					</div>
 				</div>
 			</div>
@@ -158,46 +159,46 @@
 					<div class="footer-info">
 						<div class="footer-module">
 							<div class="module-title">
-								<h2>Auto Pap j.d.o.o.</h2>
+								<h2>Randy</h2>
 								<hr>
 							</div>
 							<div class="module-content">
-								<p>Auto Pap j.d.o.o., Josipa Runjanina 11a, 32100 Vinkovci</p>
-								<p>MBS 035371239</p>
-								<p>OIB 61157113158</p>
+								<p>Nizz NizzTech</p>
+								<p>Cell 718-551-1572</p>
+								
 							</div>
 						</div>
 						<div class="footer-module">
 							<div class="module-title">
-								<h2>Kontakt</h2>
+								<h2>Contact</h2>
 								<hr>
 							</div>
 							<div class="module-content">
 								<p>
 									<i class="far fa-clock"></i> 
-									Ponedjeljak-Petak 08:00-16:00
+									Monday-Friday 08:00-16:00
 									<br>
-									Subota 08:00-13:00
+									Saturday 08:00-13:00
 								</p>
 								<p>
-									<i class="fas fa-phone"></i> 0989427536
+									<i class="fas fa-phone"></i> 718-551-1572
 								</p>
 								<p>
-									<i class="far fa-envelope-open"></i> autopap@gmail.com
+									<i class="far fa-envelope-open"></i> nizztechrandy@gmail.com
 								</p>
 							</div>
 						</div>
 						<div class="footer-module">
 							<div class="module-title">
-								<h2>Pratite nas</h2>
+								<h2>Follow Us</h2>
 								<hr>
 							</div>
 							<div class="module-content">
 								<p>
-									<a href="#"><i class="fab fa-youtube"></i> Youtube kanal</a>
+									<a href="#"><i class="fab fa-youtube"></i> Youtube</a>
 								</p>
 								<p>
-									<a href="#"><i class="fab fa-facebook"></i> Službena facebook stranica</a>
+									<a href="#"><i class="fab fa-facebook"></i>FaceBook</a>
 								</p>
 								<p>
 									<a href="#"><i class="fab fa-instagram"></i> Instagram</a>
@@ -207,7 +208,7 @@
 					</div>
 				</div>
 				<div class="footer-copyright">
-					<p>&copy Auto Pap | Made by - Danijel Šugar</p>
+					<p>NizzTech 2019</p>
 				</div>
 				<div class="scroll-to-top" id="arrow-up" >
 					<i class="fas fa-long-arrow-alt-up"></i>
