--- a/randomcode/index1.html
+++ b/randomcode/index1.html
@@ -1,20 +1,4 @@
-</div>
-<div class="main-services-wrap">
-    <h1 id="usluge">Usluge</h1>
-    <div class="main-services">
-        <div class="services" id="service-1">
-            <div class="item">
-                <img src="img/tires.jpg" alt="Tires">
-                <div class="caption" id="caption-1">
-                    <h2>Montaža i balansiranje guma</h2>
-                    <p>Kupili ste gume kod nekog drugog, ili jednostavno želite montirati gume koje ste čuvali u garaži, nema problema. Naši servisi vrše montažu svih guma.</p>
-                    <ul>
-                        <li>Ugradnja i balansiranje auto gume 12ʺ-14ʺ = 50 kn</li>
-                        <li>Ugradnja i balansiranje auto gume 15ʺ = 60 kn</li>
-                        <li>Ugradnja i balansiranje auto gume 16ʺ = 70 kn</li>
-                        <li>Ugradnja i balansiranje auto gume 17ʺ-18ʺ = 80 kn</li>
-                        <li>Ugradnja i balansiranje auto gume 19ʺ-20ʺ = 90 kn</li>
-                        <li>Ugradnja i balansiranje auto gume 21ʺ-26ʺ = 100 kn</li>
+//Erasing and re writing due to non payment 
                     </ul>
                 </div>
                 <div class="services-txt">
